Fix: 色々変更と修正

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,5 +4,6 @@ main: com.gmail.necnionch.myplugin.guildsystemexampledev.bukkit.GuildSystemExamp
 api-version: 1.18
 author: Necnion8
 
+load: STARTUP
 depend:
   - LOGuildSystem
