--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,8 @@ dependencies {
     implementation 'org.jetbrains:annotations:23.0.0'
     compileOnly 'org.spigotmc:spigot-api:1.18.2-R0.1-SNAPSHOT'
 
-    implementation files("libs/LOGuildSystem-1.2.1-SNAPSHOT.jar")
+    implementation files("./libs/LOGuildSystem-1.2.1-SNAPSHOT.jar")
+    implementation files("./libs/LOInfoGUI-1.0.0.jar")
 }
 
 def targetJavaVersion = 17
